add answers for tasks